--- a/Miyu/Feature/Settings/SettingsViewController.storyboard
+++ b/Miyu/Feature/Settings/SettingsViewController.storyboard
@@ -6,36 +6,105 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Settings View Controller-->
-        <scene sceneID="27R-Sx-moJ">
+        <!--Settings Table View Controller-->
+        <scene sceneID="G3f-0c-7kj">
             <objects>
-                <viewController storyboardIdentifier="SettingsViewController" id="AGr-lB-tQB" customClass="SettingsViewController" customModule="Miyu" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="dhf-Km-eSh">
+                <tableViewController storyboardIdentifier="SettingsTableViewController" id="RQS-BS-raI" customClass="SettingsTableViewController" customModule="Miyu" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="nJk-LY-Yuh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WX3-m8-jBD">
-                                <rect key="frame" x="163" y="89" width="49" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <action selector="activityRatingSwitch:" destination="AGr-lB-tQB" eventType="valueChanged" id="2Ay-HN-s5b"/>
-                                </connections>
-                            </switch>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="7Qo-jd-BXO"/>
-                    </view>
+                        <sections>
+                            <tableViewSection headerTitle="Settings" id="zFs-1n-FTk">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Ycx-QT-Utk">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ycx-QT-Utk" id="WBH-au-aGq">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show who you rated" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8wb-g2-KV9">
+                                                    <rect key="frame" x="16" y="12" width="156" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="8wb-g2-KV9" secondAttribute="height" multiplier="52:7" id="itu-1Z-lo8"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WX3-m8-jBD">
+                                                    <rect key="frame" x="310" y="7" width="51" height="31"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="WX3-m8-jBD" secondAttribute="height" multiplier="49:31" id="cWP-yy-I3K"/>
+                                                    </constraints>
+                                                    <connections>
+                                                        <action selector="activityRating:" destination="lIf-7I-IGa" eventType="valueChanged" id="51r-E1-lGh"/>
+                                                        <action selector="activityRatingSwitch:" destination="RQS-BS-raI" eventType="valueChanged" id="wJj-iD-La9"/>
+                                                    </connections>
+                                                </switch>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="8wb-g2-KV9" firstAttribute="top" secondItem="WBH-au-aGq" secondAttribute="topMargin" constant="1" id="7yi-eS-Cno"/>
+                                                <constraint firstItem="8wb-g2-KV9" firstAttribute="leading" secondItem="WBH-au-aGq" secondAttribute="leadingMargin" id="TcQ-TA-OJl"/>
+                                                <constraint firstAttribute="trailing" secondItem="WX3-m8-jBD" secondAttribute="trailing" constant="16" id="bO7-Dw-uS6"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="8wb-g2-KV9" secondAttribute="bottom" id="gH2-qC-Att"/>
+                                                <constraint firstItem="WX3-m8-jBD" firstAttribute="top" secondItem="WBH-au-aGq" secondAttribute="top" constant="7" id="hJI-UL-qUN"/>
+                                                <constraint firstAttribute="bottom" secondItem="WX3-m8-jBD" secondAttribute="bottom" constant="5.5" id="tGG-y4-HIg"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="Account" id="gdj-JW-mj4">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="hyU-pm-MqN">
+                                        <rect key="frame" x="0.0" y="100" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hyU-pm-MqN" id="vEn-a9-mIc">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EtF-Wl-mDP">
+                                                    <rect key="frame" x="15" y="6" width="345" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="EtF-Wl-mDP" secondAttribute="height" multiplier="23:2" id="Azc-1h-VwV"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Sign out of "/>
+                                                    <connections>
+                                                        <action selector="signOut:" destination="RQS-BS-raI" eventType="touchUpInside" id="yxx-hm-LGQ"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="EtF-Wl-mDP" secondAttribute="bottom" constant="6" id="AQb-h5-mq8"/>
+                                                <constraint firstAttribute="trailing" secondItem="EtF-Wl-mDP" secondAttribute="trailing" id="Iy5-mp-UmJ"/>
+                                                <constraint firstItem="EtF-Wl-mDP" firstAttribute="top" secondItem="vEn-a9-mIc" secondAttribute="top" constant="6" id="fbu-O5-tIn"/>
+                                                <constraint firstItem="EtF-Wl-mDP" firstAttribute="leading" secondItem="vEn-a9-mIc" secondAttribute="leading" constant="15" id="xvU-FR-VfR"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="RQS-BS-raI" id="t9m-HH-YqC"/>
+                            <outlet property="delegate" destination="RQS-BS-raI" id="TPP-Dx-btO"/>
+                        </connections>
+                    </tableView>
                     <connections>
-                        <outlet property="activityRatingSwitch" destination="WX3-m8-jBD" id="VIJ-n5-4TR"/>
+                        <outlet property="activityRatingSwitch" destination="WX3-m8-jBD" id="l4w-gB-3hO"/>
                     </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="GEE-2k-jEH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zax-Ka-xhs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="lIf-7I-IGa" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-151" y="32"/>
+            <point key="canvasLocation" x="666" y="32"/>
         </scene>
     </scenes>
 </document>
