feature rating func

--- a/Miyu/Feature/ActivityRating/RatedUserViewController.storyboard
+++ b/Miyu/Feature/ActivityRating/RatedUserViewController.storyboard
@@ -38,7 +38,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jvo-51-uiH" customClass="CosmosView" customModule="Cosmos">
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Jvo-51-uiH" customClass="CosmosView" customModule="Cosmos">
                                 <rect key="frame" x="27.5" y="340.5" width="320" height="202.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
